--- a/requirements.txt
+++ b/requirements.txt
@@ -78,7 +78,7 @@ tornado==6.1
 tqdm==4.61.2
 traitlets
 tzlocal==2.1
-Unidecode==1.3.7
+unidecode==1.3.2
 urllib3==1.26.6
 validators==0.18.2
 watchdog==2.1.3
