--- a/requirements.txt
+++ b/requirements.txt
@@ -61,7 +61,7 @@ pyzmq==22.1.0
 regex==2021.7.6
 requests==2.26.0
 scikit-learn==1.3.2
-scipy
+scipy==1.6.3
 Send2Trash==1.7.1
 six==1.16.0
 sklearn==0.0
